# openaiAPI-transformers-embedLM

./: .dockerignore  .env  .env.bak  .env.example  .gitignore  AGENTS.md  CONFIGURATION_GUIDE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.gpu  LOGGING.md  MODEL_PRELOADING_GUIDE.md  MODEL_SOURCE_GUIDE.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PRECISION_CONFIGURATION.md  QWEN.md  README.md  REALTIME_BATCH_PROCESSOR_FIXES.md  check_config.py  check_model_config.py  debug_model_mapping.py  debug_model_name.py  docker-compose-extend.yml  docker-compose.gpu.yml  docker-compose.yml  download_model.py  init-docker-dirs.bat  init-docker-dirs.sh  modelscope下载模型.md  overwrite-diff.py  pyproject-quan.toml  pyproject.toml  test-load.py  test_model_mapping_diagnosis.py  test_preload_config.py  verify_jina_code_model.py  提示词.txt
.trae/rules/: project_rules.md
emb_model_provider/: __init__.py  main.py
emb_model_provider/api/: __init__.py  embeddings.py  exceptions.py  middleware.py  models.py
emb_model_provider/core/: __init__.py  config.py  log_manager.py  logging.py  model_manager.py  performance_monitor.py  tokenizer_manager.py
emb_model_provider/docs/: BATCH_TIMEOUT_CONFIG.md  HTTP-debug-archive.md  MODELSCOPE_USAGE_GUIDE.md  MODEL_ALIASES.md  MODEL_CONFIG.md  MULTI_MODEL_SUPPORT.md  batch_optimization_summary.md  (+9 more)
tests/: __init__.py  test_api_endpoints.py  test_api_models.py  test_api_models_simple.py  test_batch_optimization.py  test_config.py  test_e2e.py  test_embedding_service.py  test_loaders.py  test_log_manager.py  test_logging.py  test_model_manager.py  test_model_mapping_fixed.py  test_model_mapping_precision.py  test_openai_compatibility.py  test_performance.py  test_performance_comparison.py  test_precision_config.py  test_realtime_batching.py  test_tokenizer_manager.py
(+22 files in other folders)
